<resources>
    <string name="app_name">東方VGS</string>
    <string name="app_name_long">東方BGM on VGS</string>
    <string name="service_description">Playback on the Background</string>
    <string name="notify_channel_id">com_suzukiplan_tohovgs_background_playback</string>
    <string name="home">Home</string>
    <string name="sequential">All</string>
    <string name="shuffle">Shuffle</string>
    <string name="retro_ui">Retro</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ask_unlock">You can unlock all songs in %s by playing reward ads.\nAre you sure you want to play it?</string>
    <string name="ask_unlock_all">You can unlock all songs by playing reward ads.\nAre you sure you want to play it?</string>
    <string name="ask_lock">Are you sure you want to lock the %s?\n\nNote: You will need to play the reward ad when you unlock it again.</string>
    <string name="generating_shuffle_play_list">Generating shuffle play list…</string>
    <string name="all_songs_are_locked">All songs are locked</string>
    <string name="infinity">∞</string>
    <string name="error_ads">Failed to load ads.</string>
    <string name="error_ads_no_config">Unlock without playing ads because there is no ad inventory.</string>
    <string name="seek_bar">Seek Bar</string>
    <string name="unlock_all_songs">Unlock All Songs</string>
    <string name="hide_unlock_all_button">Hide unlock all button</string>
    <string name="launch_emulator_error">Cannot launch the VGS emulator.\nALL SONGS ARE LOCKED.</string>
    <string name="download">Download latest songs from server</string>
    <string name="contents">Content</string>
    <string name="sound">Playback Settings</string>
    <string name="master_volume">Master Volume: %d%%</string>
    <string name="support">SUZUKI PLAN - Social Media</string>
    <string name="support_twitter">Twitter</string>
    <string name="support_youtube">YouTube</string>
    <string name="support_tiktok">TikTok</string>
    <string name="support_github">GitHub</string>
    <string name="communication_error">Communication with the server has failed. (status code: %d)</string>
    <string name="up_to_date">All songs are up to date.\nThe first update information for new songs will be posted on my Twitter, so please follow me if you like.</string>
    <string name="update_list_only">Only the song list has been updated. No new songs have been added.</string>
    <string name="added_songs">Updated Following Songs</string>
    <string name="close">Close</string>
    <string name="added">Added</string>
    <string name="updated">Updated</string>
    <string name="ask_download_before_unlock">There are songs that have not yet been downloaded. Do you want to download them first because you will need to unlock them again after downloading?</string>
    <string name="answer_download">Download</string>
    <string name="answer_unlock">Unlock</string>
    <string name="info">Information</string>
    <string name="apple_music">Check original songs (Apple Music)</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_reward_ads">Remove Reward Ads</string>
    <string name="remove_banner_ads">Remove Banner Ads</string>
    <string name="remove_reward_ads_with_price">Remove Reward Ads\nPrice: %s</string>
    <string name="remove_banner_ads_with_price">Remove Banner Ads\nPrice: %s</string>
    <string name="remove_reward_ads_about">Purchase of this product will allow you to unlock songs without playing reward video ads. Once purchased, this product can be used permanently on your Google Account.</string>
    <string name="remove_banner_ads_about">Purchase of this product will eliminate the banner ads at the top of the screen and the interstitial ads during shuffle playback. Because these ads are important for us to avoid operating at a loss, they are priced at a high level. Once purchased, this product can be used permanently on your Google Account.</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="cannot_connect_google_play">Cannot connect to the GooglePlay.</string>
    <string name="purchase">Purchase</string>
    <string name="lock_song">Lock this song</string>
    <string name="apple_music_not_exist">This music is not yet available on AppleMusic.</string>
    <string name="kobusi_mode">KoBuSi mode</string>
    <string name="all_songs">All Songs</string>
    <string name="favorites">Favorites</string>
    <string name="sort_by_artwork">Sort by Art-Work</string>
    <string name="shuffle_list">Shuffle</string>
    <string name="edit_favorites">Edit Favorites</string>
    <string name="cannot_start_browser">Operation canceled because no bootable application is installed.</string>
    <string name="playback_speed">x%d.%02d</string>
    <string name="playback_speed_setting">Playback Speed: x%d.%02d</string>
    <string name="reset">Reset</string>
</resources>