<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_footer_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_all"
        android:icon="@drawable/ic_footer_all"
        android:title="@string/sequential" />
    <item
        android:id="@+id/navigation_shuffle"
        android:icon="@drawable/ic_footer_shuffle"
        android:title="@string/shuffle" />
    <item
        android:id="@+id/navigation_retro"
        android:icon="@drawable/ic_footer_retro"
        android:title="@string/retro_ui" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_footer_settings"
        android:title="@string/settings" />
</menu>