<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/white_alpha50"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:alpha="0.9"
                android:text="@string/contents"
                android:textColor="@color/light_blue"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/download"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/download"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:alpha="0.9"
                android:text="@string/sound"
                android:textColor="@color/light_blue"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/master_volume_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/master_volume"
                android:textColor="@color/white_alpha75"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/master_volume_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/seek_bar"
                android:max="100"
                android:min="0"
                android:padding="8dp"
                android:progressTint="@color/dark_blue"
                android:thumbTint="@color/light_blue" />

            <TextView
                android:id="@+id/playback_speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/playback_speed_setting"
                android:textColor="@color/white_alpha75"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/playback_speed_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:contentDescription="@string/seek_bar"
                android:max="35"
                android:min="0"
                android:padding="8dp"
                android:progressTint="@color/dark_blue"
                android:thumbTint="@color/light_blue" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="1"
                    android:text="@string/kobusi_mode"
                    android:textColor="@color/white_alpha75"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/kobusi_toggle"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/kobusi_mode"
                    android:textSize="12dp"
                    tools:ignore="SpUsage" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:alpha="0.9"
                android:text="@string/support"
                android:textColor="@color/light_blue"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/support_twitter"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/youtube"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/support_youtube"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tiktok"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/support_tiktok"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/support_github"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:alpha="0.9"
                android:text="@string/info"
                android:textColor="@color/light_blue"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/apple_music"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/apple_music"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:alpha="0.9"
                android:text="@string/remove_ads"
                android:textColor="@color/light_blue"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/remove_reward_ads"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/remove_reward_ads"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/remove_banner_ads"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/remove_banner_ads"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/restore_purchase"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/restore_purchase"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</FrameLayout>