<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_alpha75"
    android:clickable="true"
    android:focusable="false">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/sound"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_alpha12" />

        <TextView
            android:id="@+id/master_volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/master_volume"
            android:textColor="@color/white_alpha75"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/master_volume_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="100"
            android:min="0"
            android:padding="8dp"
            android:progressTint="@color/dark_blue"
            android:thumbTint="@color/light_blue" />

        <TextView
            android:id="@+id/playback_speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/playback_speed_setting"
            android:textColor="@color/white_alpha75"
            android:textSize="12dp"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/playback_speed_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/seek_bar"
            android:max="35"
            android:min="0"
            android:padding="8dp"
            android:progressTint="@color/dark_blue"
            android:thumbTint="@color/light_blue" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="1"
                android:text="@string/kobusi_mode"
                android:textColor="@color/white_alpha75"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/kobusi_toggle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/kobusi_mode"
                android:textSize="12dp"
                tools:ignore="SpUsage" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12dp"
                tools:ignore="SpUsage" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>